# package-example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  jenkins.py
Bar/: CMakeLists.txt  bar.cpp
Boo/: BooConfig.cmake.in  CMakeLists.txt  boo.cpp  boo.hpp
Foo/: CMakeLists.txt  Foo.cpp  FooConfig.cmake  FooConfig.cmake.in  baz.cpp
Foo/Source/foo/: Bar.cpp  Bar.hpp  Baz.cpp  Baz.hpp
Foo/cmake/: Config.cmake.in
wiki/: FindPackage.UML-sequence.graphml  README.txt
